2002-08-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_window):
	* fvwm/stack.c (is_on_top_of_layer_ignore_rom):
	* fvwm/focus.c (focus_grab_buttons):
	fixed core dump

2002-08-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (AddBinding):
	fixed handling of "unknown" modifiers in key bindings

2002-08-02  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/Makefile.am:
	DESTDIR fix

2002-07-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (CMD_WarpToWindow):
	fixed negative arguments for unmanaged windows

2002-07-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	fixed compilation problem w/ backported fix from 2.5.3

	* fvwm/decorations.c (SelectDecor):
	removed debug fprintf

2002-07-22  Bob Woodside  <dumbledore@woodsway.com>

	* fvwm/placement.c (PlaceWindow):
	Fixed interaction between CascadePlacement and StartsOnPage

2002-07-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (move_window_doit):
	* fvwm/decorations.c (check_if_function_allowed):
	fixed the MWM_FUNC_MOVE hint

2002-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/fvwmsignal.c (fvwmSelect):
	call alloca(0) in fvwmSelect to make sure the memory is not leaked in
	modules

2002-07-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (CaptureOneWindow):
	fixed a core dump w/ windows being destroyed during a recapture

2002-07-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleEnterNotify):
	another click+drag fix

	* fvwm/move_resize.c (CMD_Resize):
	(moveLoop):
	* fvwm/builtins.c (CMD_StrokeFunc):
	* fvwm/focus.c (SetPointerEventPosition):
	* fvwm/functions.c (CheckActionType):
	* libs/Pointer.c (GetLocationFromEventOrQuery):
	fixed some bugs w/ pointer on wrong screen

2002-07-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (size_menu_horizontally):
	fixed menu style SubmenusLeft w/ icons in menu items

2002-07-17  Dominik Vogt  <dominik.vogt@gmx.de>
