@@ -1,3 +1,8 @@
+2002-08-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/Bindings.c: (AddBinding):
+	another attempt at handling "unknown" modifiers in key bindings
+
 2002-08-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/add_window.c (destroy_window):
